# Slothtop-assistant

./: .env_example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/agent/: agent.py  agent_state.py
src/app/: app.py  settings.json
src/app/assets/: agent_state.py  classes.py  main_page_assets.py  settings_page_assets.py
src/models/: models.py
src/pages/: main_page_assets.py  settings_page_assets.py
src/schemas/: schemas.py
src/tools/: internet_speed.py  obsidian_search_tool.py  tools.py  web_work_tools.py
src/tools/computer_state_tools/: drives_info.py
src/tools/computer_state_tools/monitoring_tools/: monitoring_tool.py
src/tools/monitoring_tools/: monitoring_class.py  monitoring_tool.py
src/voice/: voice_recognition.py
